# coding-workspace

./: .gitignore  README.md
Plotting/GnuPlot/: GNU-LAMMPS-log-plot  GNU-tutorial.gnu  gnuplot-latex.gnu
Plotting/Matplotlib/: plot_script.py
Scripts/: LAMMPS-cell-slicer.py  disk-usage-script  disk-usage-script_directories  dot-removal_script  module_check
Scripts/old_scripts/: VNC_set_up
bash-scripts/: CASTEP-coordinants_extract  Coding_tips_bash  GNU-plot-LAMMPS-log  LAMMPS-animation-loop-shortner.py  LAMMPS-log2txt  LAMMPS_load_module  bash_profile  bashrc  pythonrc  vimrc
bash-scripts/old_scripts/: GNU-plot-LAMMPS-log  VNC_kill  ls_extended  scp_from_cx1  scp_to_cx1  ssh_cx1
books-n-shit/OpenMP_tutorials/: Guide into OpenMP_ Easy multithreading programming for C++.html
books-n-shit/openmp-sum/: openmpsum.py
c-school/lesson1/: Makefile
c-school/lesson2-mpi/: Makefile
c-school/myPython-c-extension/: setup.py  test.py
c_python_integration/: compiler_command
c_python_integration/test_v1-ctypes/: testlib.cpp  testlib_main.out  testlibwrapper.py
c_python_integration/test_v10-cpp-class-cleanup/: testlib.cpp  testlibwrapper.py  workspace_src.cpp
c_python_integration/test_v11-makefile_matrix_class/: .cproject  .project  Makefile
c_python_integration/test_v12-library-interface-wMake/: Makefile  myLibWrapper.py  workspace.py
c_python_integration/test_v2-ctypes_cont/: testlib.cpp  testlib_main.out  testlibwrapper.py
c_python_integration/test_v3-CFFI/: compiler_command  testlib.cpp  testlib_main.out  testlibwrapper.py
c_python_integration/test_v4-openMP/: compiler_command  testlib.cpp  testlib_main.out  testlibwrapper.py
c_python_integration/test_v5-overhead/: testlib.cpp  testlib_main.out  testlibwrapper.py
c_python_integration/test_v6-Matrix-class/: main_testlib.out  short_testlib.cpp  testlibwrapper.py
c_python_integration/test_v7-Eigen/: testlib.cpp  testlibwrapper.py
c_python_integration/test_v8-void-pointer-class/: minimal_version.cpp  testlib-matrix.cpp  testlib.cpp  testlibwrapper.py
c_python_integration/test_v9-cpp-python-class-vPoint/: testlib.cpp  testlibwrapper.py
castep_python/IO_module_testing_v0/: CASTEP_io_module_cellfile.py  CASTEP_script.py  CNT_66_CDT_cluster_convergence-newcell.2_flakes.castep  CNT_66_CDT_cluster_convergence-newcell.2_flakes.cell  CNT_66_CDT_cluster_convergence-newcell.2_flakes.geom  TEMP  backpu.py  backpu_cellfile.py  snap.MedeA_whole_system-funct-CNT.0.x.after_simulation.all.xyz  supertest.cell  test.cell  test_file.xyz
castep_python/castep-coordinants_extract-new/: Butane_66_CNT_cluster_convergence.Butane-2_flakes.castep  Butane_66_CNT_cluster_convergence.Butane-2_flakes.geom  CASTEP-coordinants_extratc.py  relaxed-Butane_66_CNT_cluster_convergence.Butane-2_flakes.cell
coding-tips/: Coding_tips_python
cpp-openMPtutorial/openMP_v1/: Makefile
cpp-openMPtutorial/openMP_v2-workSharing/: Makefile
cpp-openMPtutorial/openMP_v3-MolDyn/: Makefile  testFile.xyz
cpp-openMPtutorial/openMP_v4-MAndelBrotTasks/: Makefile
cpp-openMPtutorial/openMP_v5-miniMolDyn/: README.md  inputTestfile.xyz
cpp-school/: compiler_command
cpp-school/armodillo_v1-intro/: example.cpp  main_example.out
cpp-school/classes_v0-data_structures/: example.cpp  example_main.out
cpp-school/classes_v1/: example.cpp  example_main.out
cpp-school/classes_v2-Matrix-class/: example.cpp
cpp-school/eclipse_test_v1/: .cproject  Makefile
cpp-school/eigen_v1-intro/: example.cpp  main_example.out  test
cpp-school/file-i-o/: file-i-o.cpp  fileio.txt
cpp-school/folder_creation_linux/: example.cpp  example_main.out
cpp-school/pointers_v1/: example.cpp  main_example.out
local/: armadillo-7.600.2.tar.xz  eigen_header_substitution_eclipse.xml
python-TheLink-tutorial/: TheLink-tutorial-master.ipynb  master2.ipynb  part-1-python-basics_backup.ipynb
python-awsome/: mp_best.py  mp_module.py
python-c-extension/cffi-large-project-cpp/cpp/: CMakeLists.txt  setup.py  test.py  workspace.py
python-c-extension/cffi-large-project-cpp/cpp/dependencies/catch2/: catch.hpp
python-c-extension/cffi-large-project-cpp/cpp/src/: arraymath.cpp  arraymath.h  utilities.cpp  utilities.h
python-c-extension/cffi-large-project-cpp/cpp/test_python/: test_arraymath.py
python-c-extension/cffi-large-project-cpp/cpp/tst/: test_arraymath.cpp  test_main.cpp  test_workspace.cpp
python-c-extension/test-cffi/c/: CMakeLists.txt  setup.py  workspace.py
python-c-extension/test-cffi/c/extension/: arraymath.py
python-c-extension/test-cffi/c/src/: arraymath.c  arraymath.h  main.c  utilities.c  utilities.h
python-cpp-module/: Makefile  workspace.py
python-dataset/: dataset.py  dataset_backends.py  dataset_sparse.py  test_dataset.py  test_dataset_backends.py
python-inline/: control-v1-test.py
python-misc/: kernel_density_estimation.py  quickplot.py  storage_utilities.py  utility_decorators.py
python-modules/: CASTEP_io_module.py  CASTEP_io_module_castepfile.py  CASTEP_io_module_cellfile.py
python-mpi/: path-mpi4py
python-multiprocessing/: mp_best.py  mp_condensed.py  mp_module.py  mp_workers.py  parallel.py  test_parallel.py
python-numba/: numba1-test.py  numba2-dot.py  numba3-parallel_tests.py  timemachine.txt  timit.py
python-pickle/: filename.pkl  pickle_test.py
python-plotting/: gp_plotting.py  plotting.py
python-profiling/: profile.py  profile_decorators.py  profile_decorators_command_line.py
python-pybind11/: README.txt
python-pybind11/part1-prequisites/: .gitignore  CMakeLists.txt  workspace.py
python-pybind11/part1-prequisites/cpp/src/: Utilities.cpp  Utilities.h
python-pybind11/part1-prequisites/part1/: interface.py  utilities.py
python-pybind11/part2-intro/: .gitignore  CMakeLists.txt  workspace.py
python-pybind11/part2-intro/cpp/bindings/: ExampleModule.cpp
python-pybind11/part2-intro/cpp/src/: Example.cpp  Example.h  main.cpp
shape-recognition/: control.py  testcontrol.py
tmux-extra/: tmux.conf
(+448 files in other folders)
